--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -97,7 +97,7 @@
           </div>
         </div>
         <div class="col-12">
-          <button class="btn btn-primary" type="submit">Enviar Formulario</button>
+          <button class="btn btn-primary btn-custom" type="submit">Enviar Formulario</button>
         </div>
       </form>
     </section>
