--- a/pages/sobremilo.html
+++ b/pages/sobremilo.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Milo, el sitio web más innovador para conocerlo a El. Descubre como es, su rutina y contacto.">
+    <meta name="keywords" content="Milo, creatividad, amor y cercania">
+    <meta name="author" content="Ignacio Ferrera">
+    <link rel="icon" type="image/png" href="../images/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>✨✨Milo Web✨✨ </title>
@@ -50,17 +54,18 @@
     </main>
 
     <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <p>&copy; 2024 Milo Web</p>
-            </div>
-            <div class="footer-section">
-                <a href="#">Política de privacidad</a>
-                <a href="#">Términos de uso</a>
-                <a href="#">Contacto</a>
-            </div>
-        </div>
-    </footer>
+      <div class="footer-content">
+          <div class="footer-section">
+              <p>&copy; 2024 Milo Web</p>
+          </div>
+          <div class="footer-section">
+              <a href="#">Política de privacidad</a>
+              <a href="https://www.facebook.com/" target="_blank" rel="noopener">Facebook</a>
+              <a href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a>
+          </div>
+      </div>
+  </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
